--- a/index.html
+++ b/index.html
@@ -5,20 +5,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
   </head>
   <body>
-    <nav class="navbar bg-body-tertiary">
-      <div class="container-fluid">
-        <h5>The Drinktionary</h5>
-        <span class="link" id="start-link">Start</span>
-        <span class="link" id="search-link">Search</span>
-      </div>
+    <nav class="navbar">
+        <h2>The Drinktionary</h2>
+        <div class="centerspan">¨
+          <span class="link" id="start-link">Start</span>
+        </div>
+        <div class="lastspan">
+          <span class="link" id="search-link">Search</span>
+        </div>
     </nav>
 
     <section id="start-page" class="open">
